Data grid alignment fixed.

--- a/sinhala-song-predictor-ui/src/App.css
+++ b/sinhala-song-predictor-ui/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+.data-grid-data-row{
+  background: #FFF;
+}
